--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
 </head>
 <body>
 
-	<div class="bg-container-contact100" style="background-image: url(images/bg-01.jpg);">
+	<div class="bg-container-contact100" style="background-image: url(images/bg-05.jpg);">
 		<div class="contact100-header flex-sb-m">
 			<a href="#" class="contact100-header-logo">
-				<img src="images/icons/logo.png" alt="LOGO">
+				<img src="images/icons/frida2.png" alt="LOGO" width="50" height="80">
 			</a>
 
 			<div>
@@ -51,13 +51,13 @@
 				<i class="zmdi zmdi-close"></i>
 			</button>
 
-			<div class="contact100-form-title" style="background-image: url(images/bg-02.jpg);">
-				<span>Contact Us</span>
+			<div class="contact100-form-title" style="background-image: url(images/bg-04.jpg);">
+				<span>Llena el formulario</span>
 			</div>
 
 			<form class="contact100-form validate-form">
 				<div class="wrap-input100 validate-input">
-					<input id="name" class="input100" type="text" name="name" placeholder="Full name">
+					<input id="name" class="input100" type="text" name="name" placeholder="Nombre completo">
 					<span class="focus-input100"></span>
 					<label class="label-input100" for="name">
 						<span class="lnr lnr-user m-b-2"></span>
@@ -66,7 +66,7 @@
 
 
 				<div class="wrap-input100 validate-input">
-					<input id="email" class="input100" type="text" name="email" placeholder="Eg. example@email.com">
+					<input id="email" class="input100" type="text" name="email" placeholder="Ej. ejemplo@email.com">
 					<span class="focus-input100"></span>
 					<label class="label-input100" for="email">
 						<span class="lnr lnr-envelope m-b-5"></span>
@@ -75,7 +75,7 @@
 
 
 				<div class="wrap-input100 validate-input">
-					<input id="phone" class="input100" type="text" name="phone" placeholder="Eg. +1 800 000000">
+					<input id="phone" class="input100" type="text" name="phone" placeholder="Ej. +1 800 000000">
 					<span class="focus-input100"></span>
 					<label class="label-input100" for="phone">
 						<span class="lnr lnr-smartphone m-b-2"></span>
@@ -84,7 +84,7 @@
 
 
 				<div class="wrap-input100 validate-input">
-					<textarea id="message" class="input100" name="message" placeholder="Your comments..."></textarea>
+					<textarea id="message" class="input100" name="message" placeholder="Tus comentarios..."></textarea>
 					<span class="focus-input100"></span>
 					<label class="label-input100 rs1" for="message">
 						<span class="lnr lnr-bubble"></span>
@@ -93,7 +93,7 @@
 
 				<div class="container-contact100-form-btn">
 					<button class="contact100-form-btn">
-						Send Now
+						Enviar
 					</button>
 				</div>
 			</form>
