Se añadieron algunos cambios a la pagina principal, se hizo la ruta y se agregaron campos a el formulario

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Contact V16</title>
+	<title>Formulario</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 <!--===============================================================================================-->
@@ -32,24 +32,24 @@
 <body>
 
 	<div class="bg-container-contact100" style="background-image: url(images/bg-05.jpg);">
-		<div class="contact100-header flex-sb-m">
-			<a href="#" class="contact100-header-logo">
+		<!-- <div class="contact100-header flex-sb-m"> -->
+			<!-- <a href="#" class="contact100-header-logo">
 				<img src="images/icons/frida2.png" alt="LOGO" width="50" height="80">
-			</a>
+			</a> -->
 
-			<div>
+			<!-- <div>
 				<button class="btn-show-contact100">
 					Contact Us
 				</button>
-			</div>
-		</div>
+			</div> -->
+		<!-- </div> -->
 	</div>
 
 	<div class="container-contact100">
 		<div class="wrap-contact100">
-			<button class="btn-hide-contact100">
+			<!-- <button class="btn-hide-contact100">
 				<i class="zmdi zmdi-close"></i>
-			</button>
+			</button> -->
 
 			<div class="contact100-form-title" style="background-image: url(images/bg-04.jpg);">
 				<span>Llena el formulario</span>
@@ -57,7 +57,24 @@
 
 			<form class="contact100-form validate-form">
 				<div class="wrap-input100 validate-input">
-					<input id="name" class="input100" type="text" name="name" placeholder="Nombre completo">
+					<input id="nameFriend1" class="input100" type="text" name="friend1" placeholder="Nombre completo del referido 1">
+					<span class="focus-input100"></span>
+					<label class="label-input100" for="name">
+						<span class="lnr lnr-user m-b-2"></span>
+					</label>
+				</div>
+
+				<div class="wrap-input100 validate-input">
+					<input id="nameFriend2" class="input100" type="text" name="friend2" placeholder="Nombre completo del referido 2">
+					<span class="focus-input100"></span>
+					<label class="label-input100" for="name">
+						<span class="lnr lnr-user m-b-2"></span>
+					</label>
+				</div>
+
+
+				<div class="wrap-input100 validate-input">
+					<input id="name" class="input100" type="text" name="name" placeholder="Tu nombre completo">
 					<span class="focus-input100"></span>
 					<label class="label-input100" for="name">
 						<span class="lnr lnr-user m-b-2"></span>
