--- a/index.html
+++ b/index.html
@@ -109,9 +109,9 @@
 				</div>
 
 				<div class="container-contact100-form-btn">
-					<button class="contact100-form-btn">
+					<a class="contact100-form-btn" href="quiniela.html">
 						Enviar
-					</button>
+					</a>
 				</div>
 			</form>
 		</div>
