--- a/formulario.html
+++ b/formulario.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Quiniela</title>
+	<title>Formulario</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 <!--===============================================================================================-->
@@ -31,52 +31,88 @@
 </head>
 <body>
 
-	<div class="bg-container-contact100" style="background-image: url(images/quiniela.jpg);"></div>
+	<div class="bg-container-contact100" style="background-image: url(images/bg-05.jpg);">
+		<!-- <div class="contact100-header flex-sb-m"> -->
+			<!-- <a href="#" class="contact100-header-logo">
+				<img src="images/icons/frida2.png" alt="LOGO" width="50" height="80">
+			</a> -->
+
+			<!-- <div>
+				<button class="btn-show-contact100">
+					Contact Us
+				</button>
+			</div> -->
+		<!-- </div> -->
+	</div>
 
 	<div class="container-contact100">
 		<div class="wrap-contact100">
+			<!-- <button class="btn-hide-contact100">
+				<i class="zmdi zmdi-close"></i>
+			</button> -->
 
-			<div class="contact100-form-title" style="background-image: url(images/test.jpg);">
-				<span>Arma tu Quiniela</span>
+			<div class="contact100-form-title" style="background-image: url(images/bg-04.jpg);">
+				<span>Llena el formulario</span>
 			</div>
-
-      <section class="container">
-        <br>
-        <h2 class="display-6 text-center">Elige los dos finalistas del mundial</h2>
-      </section>
 
 			<form class="contact100-form validate-form">
 				<div class="wrap-input100 validate-input">
-			    <select class="form-control text-center" id="nameFriend1">
-			      <option>Alemania</option>
-			      <option>México</option>
-			      <option>Portugal</option>
-			      <option>Brasil</option>
-			      <option>Nicaragua</option>
-			      <option>Argentina</option>
-			    </select>
+					<input id="nameFriend1" class="input100" type="text" name="friend1" placeholder="Nombre completo del referido 1">
+					<span class="focus-input100"></span>
+					<label class="label-input100" for="name">
+						<span class="lnr lnr-user m-b-2"></span>
+					</label>
 				</div>
-
-        <section class="container">
-          <h1 class="display-4 text-center">VS</h1>
-        </section>
 
 				<div class="wrap-input100 validate-input">
-			    <select class="form-control" id="nameFriend1">
-						<option>Japon</option>
-						<option>Alemania</option>
-			      <option>México</option>
-			      <option>Portugal</option>
-			      <option>Brasil</option>
-			      <option>Nicaragua</option>
-			      <option>Argentina</option>
-			    </select>
+					<input id="nameFriend2" class="input100" type="text" name="friend2" placeholder="Nombre completo del referido 2">
+					<span class="focus-input100"></span>
+					<label class="label-input100" for="name">
+						<span class="lnr lnr-user m-b-2"></span>
+					</label>
 				</div>
 
+
+				<div class="wrap-input100 validate-input">
+					<input id="name" class="input100" type="text" name="name" placeholder="Tu nombre completo">
+					<span class="focus-input100"></span>
+					<label class="label-input100" for="name">
+						<span class="lnr lnr-user m-b-2"></span>
+					</label>
+				</div>
+
+
+				<div class="wrap-input100 validate-input">
+					<input id="email" class="input100" type="text" name="email" placeholder="Ej. ejemplo@email.com">
+					<span class="focus-input100"></span>
+					<label class="label-input100" for="email">
+						<span class="lnr lnr-envelope m-b-5"></span>
+					</label>
+				</div>
+
+
+				<div class="wrap-input100 validate-input">
+					<input id="phone" class="input100" type="text" name="phone" placeholder="Ej. +1 800 000000">
+					<span class="focus-input100"></span>
+					<label class="label-input100" for="phone">
+						<span class="lnr lnr-smartphone m-b-2"></span>
+					</label>
+				</div>
+
+
+				<div class="wrap-input100 validate-input">
+					<textarea id="message" class="input100" name="message" placeholder="Tus comentarios..."></textarea>
+					<span class="focus-input100"></span>
+					<label class="label-input100 rs1" for="message">
+						<span class="lnr lnr-bubble"></span>
+					</label>
+				</div>
+
+				<!-- Validación de formulario incorrecta -->
 				<div class="container-contact100-form-btn">
-					<button class="contact100-form-btn">
-						Finalizar
-					</button>
+						<a class="contact100-form-btn" href="quiniela.html">
+							Enviar
+						</a>
 				</div>
 			</form>
 		</div>
