--- a/index.html
+++ b/index.html
@@ -1,148 +1,150 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-	<title>Formulario</title>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-<!--===============================================================================================-->
-	<link rel="icon" type="image/png" href="images/icons/favicon.ico"/>
-<!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="vendor/bootstrap/css/bootstrap.min.css">
-<!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="fonts/font-awesome-4.7.0/css/font-awesome.min.css">
-<!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="fonts/iconic/css/material-design-iconic-font.min.css">
-<!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="fonts/Linearicons-Free-v1.0.0/icon-font.min.css">
-<!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="vendor/animate/animate.css">
-<!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="vendor/css-hamburgers/hamburgers.min.css">
-<!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="vendor/animsition/css/animsition.min.css">
-<!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="vendor/select2/select2.min.css">
-<!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="vendor/daterangepicker/daterangepicker.css">
-<!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="css/util.css">
-	<link rel="stylesheet" type="text/css" href="css/main.css">
-<!--===============================================================================================-->
-</head>
-<body>
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-	<div class="bg-container-contact100" style="background-image: url(images/bg-05.jpg);">
-		<!-- <div class="contact100-header flex-sb-m"> -->
-			<!-- <a href="#" class="contact100-header-logo">
-				<img src="images/icons/frida2.png" alt="LOGO" width="50" height="80">
-			</a> -->
+    <!--===============================================================================================-->
+    	<link rel="icon" type="image/png" href="images/icons/favicon.ico"/>
+    <!--===============================================================================================-->
+    	<link rel="stylesheet" type="text/css" href="vendor/bootstrap/css/bootstrap.min.css">
+    <!--===============================================================================================-->
+    	<link rel="stylesheet" type="text/css" href="fonts/font-awesome-4.7.0/css/font-awesome.min.css">
+    <!--===============================================================================================-->
+    	<link rel="stylesheet" type="text/css" href="fonts/iconic/css/material-design-iconic-font.min.css">
+    <!--===============================================================================================-->
+    	<link rel="stylesheet" type="text/css" href="fonts/Linearicons-Free-v1.0.0/icon-font.min.css">
+    <!--===============================================================================================-->
+    	<link rel="stylesheet" type="text/css" href="vendor/animate/animate.css">
+    <!--===============================================================================================-->
+    	<link rel="stylesheet" type="text/css" href="vendor/css-hamburgers/hamburgers.min.css">
+    <!--===============================================================================================-->
+    	<link rel="stylesheet" type="text/css" href="vendor/animsition/css/animsition.min.css">
+    <!--===============================================================================================-->
+    	<link rel="stylesheet" type="text/css" href="vendor/select2/select2.min.css">
+    <!--===============================================================================================-->
+    	<link rel="stylesheet" type="text/css" href="vendor/daterangepicker/daterangepicker.css">
+    <!--===============================================================================================-->
+    	<link rel="stylesheet" type="text/css" href="css/util.css">
+    	<link rel="stylesheet" type="text/css" href="css/main.css">
+    <!--===============================================================================================-->
 
-			<!-- <div>
-				<button class="btn-show-contact100">
-					Contact Us
-				</button>
-			</div> -->
-		<!-- </div> -->
-	</div>
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <title>Inicio</title>
+  </head>
+  <body>
 
-	<div class="container-contact100">
-		<div class="wrap-contact100">
-			<!-- <button class="btn-hide-contact100">
-				<i class="zmdi zmdi-close"></i>
-			</button> -->
+    <div class="static-background" id="static-2"></div>
 
-			<div class="contact100-form-title" style="background-image: url(images/bg-04.jpg);">
-				<span>Llena el formulario</span>
-			</div>
+    <section class="container">
+      <h1 class="display-4 text-center">Bienvenido</h1>
+      <p  class="text-center">
+        El mejor de la historia, la mejor recompensa de la historia
+      </p>
+    </section>
 
-			<form class="contact100-form validate-form">
-				<div class="wrap-input100 validate-input">
-					<input id="nameFriend1" class="input100" type="text" name="friend1" placeholder="Nombre completo del referido 1">
-					<span class="focus-input100"></span>
-					<label class="label-input100" for="name">
-						<span class="lnr lnr-user m-b-2"></span>
-					</label>
-				</div>
-
-				<div class="wrap-input100 validate-input">
-					<input id="nameFriend2" class="input100" type="text" name="friend2" placeholder="Nombre completo del referido 2">
-					<span class="focus-input100"></span>
-					<label class="label-input100" for="name">
-						<span class="lnr lnr-user m-b-2"></span>
-					</label>
-				</div>
-
-
-				<div class="wrap-input100 validate-input">
-					<input id="name" class="input100" type="text" name="name" placeholder="Tu nombre completo">
-					<span class="focus-input100"></span>
-					<label class="label-input100" for="name">
-						<span class="lnr lnr-user m-b-2"></span>
-					</label>
-				</div>
-
-
-				<div class="wrap-input100 validate-input">
-					<input id="email" class="input100" type="text" name="email" placeholder="Ej. ejemplo@email.com">
-					<span class="focus-input100"></span>
-					<label class="label-input100" for="email">
-						<span class="lnr lnr-envelope m-b-5"></span>
-					</label>
-				</div>
-
-
-				<div class="wrap-input100 validate-input">
-					<input id="phone" class="input100" type="text" name="phone" placeholder="Ej. +1 800 000000">
-					<span class="focus-input100"></span>
-					<label class="label-input100" for="phone">
-						<span class="lnr lnr-smartphone m-b-2"></span>
-					</label>
-				</div>
+      <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+          <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+        </ol>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img class="d-block w-100" src="images\Rusia.001.jpeg" alt="First slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="images\Rusia.002.jpeg" alt="Second slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="images\Rusia.003.jpeg" alt="Third slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="images\Rusia.004.jpeg" alt="Fourth slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="images\Rusia.005.jpeg" alt="Fifth slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="images\Rusia.006.jpeg" alt="Fifth slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="images\Rusia.007.jpeg" alt="Fifth slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="images\Rusia.008.jpeg" alt="Fifth slide">
+          </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
 
 
-				<div class="wrap-input100 validate-input">
-					<textarea id="message" class="input100" name="message" placeholder="Tus comentarios..."></textarea>
-					<span class="focus-input100"></span>
-					<label class="label-input100 rs1" for="message">
-						<span class="lnr lnr-bubble"></span>
-					</label>
-				</div>
+    <section class="container">
+      <h2 class="display-4 text-center">Refiere</h1>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque dictum massa non magna mollis, in euismod sapien condimentum. Fusce volutpat eu dolor vel dignissim. Vestibulum imperdiet sem dui, quis posuere urna facilisis non. Etiam ultricies rhoncus pretium. Donec tempus non sapien at cursus. Nam feugiat purus eu libero mattis pellentesque. Maecenas interdum, urna sit amet condimentum cursus, odio nulla eleifend quam, a dapibus tortor nibh non massa.
+      </p>
+    </section>
 
-				<div class="container-contact100-form-btn">
-					<a class="contact100-form-btn" href="quiniela.html">
-						Enviar
-					</a>
-				</div>
-			</form>
-		</div>
-	</div>
+    <section class="container">
+      <h2 class="display-4 text-center">Inscribete</h1>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque dictum massa non magna mollis, in euismod sapien condimentum. Fusce volutpat eu dolor vel dignissim. Vestibulum imperdiet sem dui, quis posuere urna facilisis non. Etiam ultricies rhoncus pretium. Donec tempus non sapien at cursus. Nam feugiat purus eu libero mattis pellentesque. Maecenas interdum, urna sit amet condimentum cursus, odio nulla eleifend quam, a dapibus tortor nibh non massa.
+      </p>
+    </section>
 
+    <div class="static-background" id="static-1"></div>
 
+    <section class="container">
+      <h2 class="display-4 text-center">Recibe</h1>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque dictum massa non magna mollis, in euismod sapien condimentum. Fusce volutpat eu dolor vel dignissim. Vestibulum imperdiet sem dui, quis posuere urna facilisis non. Etiam ultricies rhoncus pretium. Donec tempus non sapien at cursus. Nam feugiat purus eu libero mattis pellentesque. Maecenas interdum, urna sit amet condimentum cursus, odio nulla eleifend quam, a dapibus tortor nibh non massa.
+      </p>
+    </section>
 
-<!--===============================================================================================-->
-	<script src="vendor/jquery/jquery-3.2.1.min.js"></script>
-<!--===============================================================================================-->
-	<script src="vendor/animsition/js/animsition.min.js"></script>
-<!--===============================================================================================-->
-	<script src="vendor/bootstrap/js/popper.js"></script>
-	<script src="vendor/bootstrap/js/bootstrap.min.js"></script>
-<!--===============================================================================================-->
-	<script src="vendor/select2/select2.min.js"></script>
-<!--===============================================================================================-->
-	<script src="vendor/daterangepicker/moment.min.js"></script>
-	<script src="vendor/daterangepicker/daterangepicker.js"></script>
-<!--===============================================================================================-->
-	<script src="vendor/countdowntime/countdowntime.js"></script>
-<!--===============================================================================================-->
-	<script src="js/main.js"></script>
-	<!-- Global site tag (gtag.js) - Google Analytics -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-23581568-13"></script>
-	<script>
-	  window.dataLayer = window.dataLayer || [];
-	  function gtag(){dataLayer.push(arguments);}
-	  gtag('js', new Date());
+    <section class="container">
+      <h2 class="display-4 text-center">Participa</h1>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque dictum massa non magna mollis, in euismod sapien condimentum. Fusce volutpat eu dolor vel dignissim. Vestibulum imperdiet sem dui, quis posuere urna facilisis non. Etiam ultricies rhoncus pretium. Donec tempus non sapien at cursus. Nam feugiat purus eu libero mattis pellentesque. Maecenas interdum, urna sit amet condimentum cursus, odio nulla eleifend quam, a dapibus tortor nibh non massa.
+      </p>
+    </section>
 
-	  gtag('config', 'UA-23581568-13');
-	</script>
-</body>
+    <div class="static-background" id="static-2"></div>
+
+    <section class="container">
+      <h2 class="display-4 text-center">Gana</h1>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque dictum massa non magna mollis, in euismod sapien condimentum. Fusce volutpat eu dolor vel dignissim. Vestibulum imperdiet sem dui, quis posuere urna facilisis non. Etiam ultricies rhoncus pretium. Donec tempus non sapien at cursus. Nam feugiat purus eu libero mattis pellentesque. Maecenas interdum, urna sit amet condimentum cursus, odio nulla eleifend quam, a dapibus tortor nibh non massa.
+      </p>
+    </section>
+
+    <!-- Agregar scrips de js y bootstrap -->
+    </script>
+    <section class="container-contact100-form-btn">
+      <p>
+        <a class="contact100-form-btn" href="formulario.html">
+          Iniciar
+        </a>
+      </p>
+    </section>
+
+    <div class="static-background" id="static-3"></div>
+
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+  </body>
 </html>
